# mbox

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.bat  appveyor.yml  build.rs
.github/workflows/: rust.yml
src/: free.rs  internal.rs  lib.rs  mbox.rs  placer.rs  sentinel.rs
