[package]
name = "mbox"
version = "0.6.0"
authors = ["kennytm <kennytm@gmail.com>"]
license = "MIT"
keywords = ["malloc", "free", "ffi", "box", "cstr"]
repository = "https://github.com/kennytm/mbox"
readme = "README.md"
description = """malloc-based box.

Supports wrapping pointers or null-terminated strings returned from malloc as a Rust type, which
will be free'd on drop.
"""

build = "build.rs"
exclude = [".gitignore", ".github"]

[dependencies]
libc = "0.2"
# Feature provided as a way to cut down on dependencies
stable_deref_trait = { version = "1.0", optional = true, default-features = false }

[build-dependencies]
rustc_version = "0.3"

[features]
default = ["std", "stable_deref_trait"]
std = []
