[package]
name = "mbox"
version = "0.7.0"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
rust-version = "1.36.0"

license = "MIT"
keywords = ["malloc", "free", "ffi", "box", "cstr"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "memory-management",
    "no-std",
    "os",
]
repository = "https://github.com/kennytm/mbox"
documentation = "https://docs.rs/mbox/"
readme = "README.md"
description = """malloc-based box.

Supports wrapping pointers or null-terminated strings returned from malloc as a Rust type, which
will be free'd on drop.
"""

exclude = [".gitignore", ".github"]

[dependencies]
libc = "0.2"
# Feature provided as a way to cut down on dependencies
stable_deref_trait = { version = "1.0", optional = true, default-features = false }

[features]
default = ["std", "stable_deref_trait"]
std = []
nightly = []
