[package]
name = "mbox"
version = "0.6.1"
authors = ["kennytm <kennytm@gmail.com>"]
edition = "2018"
rust-version = "1.36.0"

license = "MIT"
keywords = ["malloc", "free", "ffi", "box", "cstr"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "memory-management",
    "no-std",
    "os",
]
repository = "https://github.com/kennytm/mbox"
documentation = "https://docs.rs/mbox/"
readme = "README.md"
description = """malloc-based box.

Supports wrapping pointers or null-terminated strings returned from malloc as a Rust type, which
will be free'd on drop.
"""

exclude = [".gitignore", ".github"]

[build-dependencies]
rustc_version = "0.3"
# lock max dependency version to ensure edition is below 2018
pest = ">=2, <=2.2.0"
ucd-trie = ">=0.1, <=0.1.4"
thiserror = ">=1, <=1.0.39"
proc-macro2 = ">=1, <=1.0.65"
once_cell = ">=1, <=1.14.0"
syn = ">=1, <=1.0.107"

[dependencies]
libc = "0.2"
# Feature provided as a way to cut down on dependencies
stable_deref_trait = { version = "1.0", optional = true, default-features = false }

[features]
default = ["std", "stable_deref_trait"]
std = []
nightly = []
